# Jenks

./: README.md  jenksMenu.mel  pipelineMenu.mel  rigModules.sublime-project  rigModules.sublime-workspace  userSetup.mel
controlShapes/: arc.shape  arrow.shape  circle.shape  crossPyramid.shape  crossedCircle.shape  cube.shape  doubleSphere.shape  dynamicsCog.shape  global.shape  hand.shape  jenkins.shape  lipUpper.shape  pringle.shape  wing.shape
crvShapes/: zCrossedCircle.py  zDualArrow.py  zDynamicsCog.py  zEyes.py  zMattJenkins.py  zPin.py  zPringle.py  zQuadArrow.py  zRoundedDualArrow.py  zRoundedQuadArrow.py  zSettingsCog.py  zTemplate.py  zThinCross.py  zWing.py
curveCreator/: crvCreator.py  crvCreatorUI.py  crvCreatorUI.ui  crvCreatorUI_3.ui  crvCreatorUI_qt5.py  newCurveUI.ui  newCurveUI_qt5.py  zArrow.py  zFoot.py  zHand.py  zLips.py
ikSplineCreator/: ikSplineCreatorUI.ui
jointDuplicator/: jointDuplicator.py  jointDuplicatorUI.ui  jointDuplicatorUI_2.ui  jointDuplicatorUI_qt5.py
magicalRenamer/: magicalRenamer.py  renamerSettingUI.ui  renamer_OLD.py
miscScripts/: addGlobalCtrlAttrs.py  connectToMultipleAttrUI.ui  connectToMultipleAttrUI_qt5.py  moveAttrUI.ui
modularRig/: defaultLocData.py  modularRig.py  uiTest1_UI.py  uiTest1_UI.ui  uiTest2_UI.ui
otherUsefulScripts/: MBSelectEveryNEdge.mel  UHRFTools_2.py  ccRenameReplace.py  sk_attrShift.py  (+1 more)
scripts/nodes/source/mjRivet/src/: CMakeLists.txt  mainPlugin.cpp  mjRivet.cpp  mjRivet.h
scripts/nodes/source/mjStretchArray/src/: CMakeLists.txt  mainPlugin.cpp  mjStretchArray.cpp  mjStretchArray.h
(+225 files in other folders)
